--- a/src/manifest.json
+++ b/src/manifest.json
@@ -71,5 +71,11 @@
     },
     "mp-qq" : {
         "usingComponents" : true
+    },
+    "h5": {
+      "publicPath": "./",
+      "router": {
+        "base": "./"
+      }
     }
 }
